examples/test/testpolicy157.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy157
  namespace: namespace499
spec:
  podSelector:
    matchLabels:
      key36: value47
      key30: value2
      key11: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value31
          key9: value21
      podSelector:
        matchLabels:
          key38: value25
          key3: value16
